# qhttpfileserver

./: .gitignore  CMakeLists.txt  app_icon.rc  httpfileserver.cpp  httpfileserver.h  main.cpp  resource.qrc  util.cpp  util.h
html/: file-list-item-template.html  index-template.html
html/static/: bootstrap-download-index.css  bootstrap.css  normalize.css  style.css
router/: filerouter.cpp  filerouter.h  router.cpp  router.h  staticresourcerouter.cpp  staticresourcerouter.h
